    - made ressource extraction from dirty water slower and requiring more input for lead, gold, uranium and neodym
    - increased modules capacity of beacons to 4 and of compact ones to 12
    - level 3 modules need 2 blue circuits instead of 5
    - buffed all speed modules by reducing the energy consumption drawback by 30%
    - added 4 more modules slots to rocket silo (to acount for less good prod 3 modules)
    - made carbon fiber bit cheaper
    - rocket parts cheaper
    - reduced crafting time on advanced wavers 2s, also blue circuit requiring 1 electronical part, 4 sim data
    - reduced acid usage on semiconductor wavers by 5
    - reduced cost of module core and base
    - high energy crystal solution results in 25 instead of 10 per craft
    - small simulation chamber now output 3 sim data per craft -> 1 core = 15/s
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 17.03.2023
  Bugfixes:
    - fixed crash when deconstructing a cooled beacon with modules with bots
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 17.03.2023
  Bugfixes:
    - fixed HTR fluidbox not being big enough for its recipes to craft
  Changes:
    - HTR recipes are now getting displayed in player crafting now
    - lithium recipe for batteries buffed
    - energy crystal growing now uses 15 acidic water per process
    - get 8 instead of 5 computer age science packs per craft, same for advanced computer age
    - get 5 instead of 3 electrictiy science packs per craft
    - made module cores a bit cheaper
    - computer cores only use 5 instead of 15 electronic parts per cycle
    - 25 less lube needed per blue belt also for splitters and undergrounds
    - fusion quantum age pack requires 1 charged neutron container
    - space quantum age requires 4 advanced rocket fuel, 4 space data
    - reduced data inputs for all quantum computer datas