@@ -820,7 +820,7 @@ title_neutrons=Neutrons and you
 
 # PAGES
 welcome=Welcome to Exotic Industries!
-welcome-text=This is the wiki page. Here you can find information about the mod, its features and mechanics. Also new discoveries might trigger the appearance if new entries in this wiki so be sure to check it from time to time. If you have questions or problems, feel free to ask them on the mod's discord server. You can find the link to the server in the mod's description on the mod portal.
+welcome-text=This is the wiki page. Here you can find information about the mod, its features and mechanics. Also new discoveries might trigger the appearance of new entries in this wiki so be sure to check it from time to time. If you have questions or problems, feel free to ask them on the mod's discord server. You can find the link to the server in the mod's description on the mod portal.
 welcome-text-2=A lot of new machines, production chains and unique features await you in this mod some easy and some are more challenging. Be sure to explore them! 
 
 game-related=Gameplay related information
